refactor: added updated at
